# djangoproject-polls

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  setup.cfg
djangoproject_polls/: asgi.py  settings.py  urls.py  wsgi.py
polls/: models.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_question_pub_date.py
polls/templates/polls/: detail.html  index.html  results.html
templates/: base.html
