[tool.poetry]
name = "djangoproject-polls"
version = "0.1.0"
description = ""
authors = ["Pio Mendoza <pio.lauren.mendoza@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
django-stubs = "^1.10.1"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
